--- a/package.json
+++ b/package.json
@@ -48,22 +48,22 @@
     "validate": "kcd-scripts validate"
   },
   "dependencies": {
-    "@babel/runtime": "^7.18.3",
-    "fetch-retry": "^5.0.2",
-    "hast-util-from-parse5": "^6.0.1",
-    "node-fetch": "^2.6.7",
-    "parse5": "^6.0.1",
-    "unist-util-visit": "^2.0.3"
+    "@babel/runtime": "^7.20.1",
+    "fetch-retry": "^5.0.3",
+    "hast-util-from-parse5": "^7.1.0",
+    "node-fetch": "^3.3.0",
+    "parse5": "^7.1.1",
+    "unist-util-visit": "^4.1.1"
   },
   "devDependencies": {
     "jest-in-case": "^1.0.2",
-    "kcd-scripts": "^12.2.0",
+    "kcd-scripts": "^12.3.0",
     "pretty-quick": "^3.1.3",
-    "remark": "^13.0.0",
-    "remark-html": "^13.0.2"
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
   },
   "peerDependencies": {
-    "gatsby": "^4.0.0"
+    "gatsby": "^4.0.0 || ^5.0.0"
   },
   "engines": {
     "node": ">=14.15.0",
