--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.0-semantically-released",
   "description": "Gatsby Remark plugin to embed well known services by their URL.",
   "main": "./require.entry.cjs",
+  "exports": {
+    "import": "./src/index.js",
+    "require": "./require.entry.cjs"
+  },
   "keywords": [
     "gatsby",
     "gatsby-plugin",
@@ -44,7 +48,6 @@
     "lint": "kcd-scripts lint",
     "setup": "npm install && npm run validate -s",
     "test": "kcd-scripts test",
-    "test:update": "npm test -- --updateSnapshot --coverage",
     "validate": "kcd-scripts validate"
   },
   "dependencies": {
@@ -66,7 +69,7 @@
     "gatsby": "^4.0.0 || ^5.0.0"
   },
   "engines": {
-    "node": ">=14.15.0",
+    "node": ">=16.0.0",
     "npm": ">=6"
   }
 }
