--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Gatsby Remark plugin to embed well known services by their URL.",
   "main": "./require.entry.cjs",
   "exports": {
-    "import": "./src/index.js",
-    "require": "./require.entry.cjs"
+    ".": {
+      "import": "./src/index.js",
+      "require": "./require.entry.cjs"
+    },
+    "./package.json": "./package.json"
   },
   "keywords": [
     "gatsby",
